[package]
name = "mlua_actor"
version = "0.1.0"
license = "MIT"
authors = ["JunYi JohnTeee Lee <johnteee@gmail.com>"]
include = ["src/**/*.rs", "Cargo.toml"]
readme = "README.md"
description = "Lua Actor for Rust(sync/async)"
documentation = "https://docs.rs/mlua_actor/"
homepage = "https://github.com/TeaEntityLab/rustMLuaActor"
repository = "https://github.com/TeaEntityLab/rustMLuaActor"
keywords = ["lua","actor","binding","async"]

[badges.maintenance]
status = "actively-developed"

[lib]
name = "mlua_actor"
path = "src/lib.rs"

[features]
default = [ "lua54", "vendored" ]
lua54 = [ "mlua/lua54", "mlua/module" ]
lua53 = [ "mlua/lua53", "mlua/module" ]
lua52 = [ "mlua/lua52", "mlua/module" ]
lua51 = [ "mlua/lua51", "mlua/module" ]
luajit = [ "mlua/luajit", "mlua/module" ]
vendored = ["mlua/vendored"]

[dependencies]
mlua = { version = "^0.6.2", features = [ "module" ] }
fp_rust = "^0.1.40"

[build-dependencies]
cc = { version = "1.0" }
pkg-config = { version = "0.3.17" }
lua-src = { version = ">= 540.0.0, < 550.0.0", optional = true, cc = "1.0" }
luajit-src = { version = ">= 210.1.2, < 220.0.0", optional = true, cc = "1.0" }
