[package]
name = "mlua_actor"
version = "0.1.1"
license = "MIT"
authors = ["JunYi JohnTeee Lee <johnteee@gmail.com>"]
include = ["src/**/*.rs", "Cargo.toml"]
readme = "README.md"
description = "Lua Actor for Rust(sync/async)"
documentation = "https://docs.rs/mlua_actor/"
homepage = "https://github.com/TeaEntityLab/rustMLuaActor"
repository = "https://github.com/TeaEntityLab/rustMLuaActor"
keywords = ["lua","actor","binding","async"]

[badges.maintenance]
status = "actively-developed"

[lib]
name = "mlua_actor"
path = "src/lib.rs"

[features]
default = [ "lua54", "vendored" ]
lua54 = [ "mlua/lua54" ]
lua53 = [ "mlua/lua53" ]
lua52 = [ "mlua/lua52" ]
lua51 = [ "mlua/lua51" ]
luajit = [ "mlua/luajit" ]
vendored = ["mlua/vendored"]

[dependencies]
mlua = { version = "^0.6.2", features = [ "send" ] }
fp_rust = "^0.1.40"

[build-dependencies]
cc = { version = "1.0" }
pkg-config = { version = "0.3.17" }
